fix text not being aligned in token-dist-table

--- a/src/app/token-distribution/token-distribution.component.scss
+++ b/src/app/token-distribution/token-distribution.component.scss
@@ -119,6 +119,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 1.5em .75em;
+  padding: 1.25em .25em;
   box-sizing: border-box;
 }
